--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             }
             
             canvas {
+                border: 4px black solid;
                 position: relative;
                 z-index: 2;
                 width: 512px;
