Change default module to test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
             function getmodule() {
                 module = get('module');
-                module = module ? module : 'colecovision';
+                module = module ? module : 'test';
             }
             
             function getgamelist() {
