--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <select id="selgame"></select><br/>
             <canvas id="canvas" width="512" height="512"></canvas>
         </div>
+        <div id="moduleinfo"></div>
     </body>
 </html>
 
