--- a/messloader.html
+++ b/messloader.html
@@ -51,6 +51,7 @@
 	    <br/>
 	    <button id="gofullscreen">Fullscreen</button>
 	    <button id="cchange_button" onclick="changeColor()">Dark Background</button>
+        <div id='gamepadtext'></div>
         </div>
         <div id="gameinfo"></div>
         <div id="moduleinfo"></div>
