--- a/messloader.html
+++ b/messloader.html
@@ -51,6 +51,7 @@
 	    <br/>
 	    <button id="gofullscreen">Fullscreen</button>
 	    <button id="cchange_button" onclick="changeColor()">Dark Background</button>
+	    <label for="mute">Mute</label><input type="checkbox" id="mute"></input>
         <div id='gamepadtext'></div>
         </div>
         <div id="gameinfo"></div>
