--- a/messloader.html
+++ b/messloader.html
@@ -25,8 +25,8 @@
              height: 100% !important;
         }
         </style>
-        <script src='jsmess-loader.js'></script>
-        <script src='jsmess-launcher.js'></script>
+        <script src='lib/loader.js'></script>
+        <script src='lib/launcher.js'></script>
     <script>
       var bg = "white";
       function changeColor() {
@@ -58,4 +58,3 @@
         <div id="moduleinfo"></div>
     </body>
 </html>
-
