--- a/example/messloader.html
+++ b/example/messloader.html
@@ -12,7 +12,7 @@
                 image-rendering: crisp-edges;
                 -ms-interpolation-mode: nearest-neighbor;
             }
-            
+
             #canvasholder {
                 text-align: center;
             }
@@ -25,8 +25,7 @@
              height: 100% !important;
         }
         </style>
-        <script src='lib/loader.js'></script>
-        <script src='lib/launcher.js'></script>
+        <script data-main='../lib/launcher' src='../vendor/alameda.js'></script>
     <script>
       var bg = "white";
       function changeColor() {
