Tests for utils/getSampleRate and changed exports.
- Adds a Node implementation of the Web Audio API to test the sample
  rate.

- Renamed exports to loader to respect the hierarchy in the lib directory.

--- a/test/runner.html
+++ b/test/runner.html
@@ -15,7 +15,8 @@
     window.expect = chai.expect;
 
     require([
-      "tests/exports"
+      "tests/loader",
+      "tests/utils/get_sample_rate"
     ], function() {
       mocha.checkLeaks();
       mocha.run();
