Initial work on gamepad.

--- a/example/messloader.html
+++ b/example/messloader.html
@@ -25,7 +25,7 @@
              height: 100% !important;
         }
         </style>
-        <script data-main='../lib/launcher' src='../node_modules/alameda/alameda.js'></script>
+        <script data-main='../lib/index' src='../node_modules/alameda/alameda.js'></script>
     <script>
       var bg = "white";
       function changeColor() {
