--- a/test/runner.html
+++ b/test/runner.html
@@ -16,6 +16,7 @@
 
     require([
       "tests/loader",
+      "tests/gamepad",
       "tests/utils/get_sample_rate"
     ], function() {
       mocha.checkLeaks();
