--- a/test/runner.html
+++ b/test/runner.html
@@ -14,11 +14,17 @@
   <script>
     window.expect = chai.expect;
 
-    require([
+    var tests = [
+      // Unit tests.
       "tests/loader",
       "tests/gamepad",
-      "tests/utils/get_sample_rate"
-    ], function() {
+      "tests/utils/get_sample_rate",
+
+      // Browser-specific unit tests.
+      "browser/gamepad"
+    ];
+
+    require(tests, function() {
       mocha.checkLeaks();
       mocha.run();
     });
